Add second phone number

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="about">
                 <!-- <h2 class="about-position">Front-End Developer</h2> -->
                 <h1 class="about-name">Zinchenko Valeriia</h1>
-                <p class="about-description">Received a recent bachelor's degree with experience in web development. I have been programming electronic questionnaires for 11 months. I am currently studying at the Full-stuck course, I have already completed the first part (Front-end).</p>
+                <p class="about-description">Received a recent bachelor's degree with experience in web development. I have been programming electronic questionnaires for 1 year. I am currently studying at the Full-stuck course, I have already completed the first part (Front-end).</p>
             </div>
             <!-- Projects -->
             <div class="projects">
@@ -29,7 +29,7 @@
                 <ol class="project-list">
                     <li class="projects-item">
                         <span class="project">
-                            <a href="https://valeriiasnow.github.io/goit-markup-hw-07/" class="project-link">https://valeriiasnow.github.io/goit-markup-hw-07/</a>
+                            <a href="https://valeriiasnow.github.io/goit-markup-hw-08/" class="project-link">https://valeriiasnow.github.io/goit-markup-hw-08/</a>
                             ........
                             <span class="project-bracket">[</span> HTML5, CSS3 <span class="project-bracket">]</span>
                         </span>
@@ -458,16 +458,23 @@
             <!-- Contacts -->
             <div class="contacts">
                 <h3 class="sidebar-title">Contacts</h3>
-                <div>
-                    <p>
+                <ul class="contact_list">
+                    <li>
                         <span class="contact-type">C:</span>
-                        <a href="tel:+380964948434" class="contact-link">+38 096 494 84 34</a>
-                    </p>
-                    <p>
+                        <ul class="tel_list">
+                            <li class="tel_item">
+                                <a href="tel:+380964948434" class="contact-link">+38 096 494 84 34</a>
+                            </li>
+                            <li class="tel_item">
+                                <a href="tel:+14386991477" class="contact-link">+1 438 699 14 77</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
                         <span class="contact-type">E:</span>
-                        <a href="mailto:zinchenkovaleria31@gmail.com" class="contact-link">zinchenkovaleria31@gmail.com</a>
-                    </p>
-                </div>
+                    <a href="mailto:zinchenkovaleria31@gmail.com" class="contact-link">zinchenkovaleria31@gmail.com</a>
+                    </li>
+                </ul>
             </div>
             <!-- Tech Skills -->
             <div class="tech-skills">
